Fix test file paths to use test-data directory